namespace java net.lab1318.costume.api.services
namespace * costume.api.services

exception IoException {
	// validation {"minLength": 1}
    string cause_message;
}
